Fixed up ordering/spacing of some elements for new updates.

--- a/src/components/Community.module.css
+++ b/src/components/Community.module.css
@@ -5,6 +5,7 @@
 
 .community {
     max-width: 600px;
+    margin: 2rem 0;
     display: flex;
     flex-direction: column;
     align-items: center;
